add_subdirectory(ImageHandler)
add_subdirectory(ImageEncryptor)
add_subdirectory(ImageDecoder)
add_subdirectory(CommandLineParser)
add_subdirectory(ProcessingMode)
add_subdirectory(ParallelEncoder)
add_subdirectory(MessageTooBigException)
add_subdirectory(NotSteganoException)
add_subdirectory(MessageSaver)
add_subdirectory(OutputMode)
add_subdirectory(ResultHandler)